--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RandomAppName76750",
+  "name": "Compare Plan Vs Actual",
   "version": "0.1.1",
   "private": true,
   "devDependencies": {
