--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Random App Name76750",
+    "name": "Compare Plan Vs Actual",
     "className": "CustomApp",
     "server": "https://rally1.rallydev.com",
     "sdk": "2.1",
